Fix header z-index covering cart

--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -5,7 +5,6 @@
     place-content: space-between;
     margin: 0 0 0 0;
     box-shadow: var(--shadow);
-    z-index: 9999;
 }
 
 .footer-info{
